[gd_scene load_steps=8 format=3 uid="uid://b8yopd2yw36hr"]

[ext_resource type="PackedScene" uid="uid://cscfvrd2y3rxs" path="res://BaseScenes/entity.tscn" id="1_v27bd"]
[ext_resource type="Script" uid="uid://ddyhrpx2dqewh" path="res://enemy_base.gd" id="2_muci8"]
[ext_resource type="Script" uid="uid://de6dxlvawq6wp" path="res://BaseScenes/EnemyBaseSprite.gd" id="3_dfsip"]
[ext_resource type="SpriteFrames" uid="uid://wuip3fpgcl8a" path="res://Enemies/enemybase.tres" id="3_gxut8"]
[ext_resource type="PackedScene" uid="uid://cvcivttydua41" path="res://Components/hurtbox_component.tscn" id="3_muci8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dfsip"]
resource_local_to_scene = true

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gxut8"]
resource_local_to_scene = true

[node name="EnemyBase" instance=ExtResource("1_v27bd")]
script = ExtResource("2_muci8")

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource("RectangleShape2D_dfsip")

[node name="AnimatedSprite2D" parent="." index="1"]
sprite_frames = ExtResource("3_gxut8")
animation = &"MovingLaterally"
script = ExtResource("3_dfsip")

[node name="Hitbox" parent="." index="2"]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource("RectangleShape2D_gxut8")

[node name="HurtboxComponent" parent="." index="3" instance=ExtResource("3_muci8")]
collision_layer = 8

[node name="PreparationTimer" type="Timer" parent="." index="4"]
one_shot = true

[connection signal="commence_attack" from="." to="." method="_on_commence_attack"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="PreparationTimer" to="." method="_on_preparation_timer_timeout"]
